# FP_TEST

./: .gitignore  README.md
.github/workflows/: ccpp.yml
FP/3Ch/: CMakeCache.txt  CMakeLists.txt  Makefile  ch3exe  cmake_install.cmake  testexe
FP/4Ch/: CMakeCache.txt  Makefile  bind2nd.cc  ch4exe  cmake_install.cmake
FP/common/: person.h
FP/util/: test_string16exe
docs/: index.html
src/: README.md
src/3Ch/: older_than.cc  older_thanexe  ramda.cc  ramdaexe  testcpp.cc
src/4Ch/: CMakeCache.txt  CMakeLists.txt  Makefile  bind2nd.cc  ch4exe  cmake_install.cmake  log
src/X11/: README.md  widget_test.cpp
src/base/: CMakeLists.txt
src/base/ipc/: README.md
src/base/ipc/message_queue/: README.md
src/base/ipc/message_queue/constructor/: CMakeLists.txt  constructor.cc  main.cc
src/base/ipc/message_queue/consumer/: CMakeLists.txt  consumer.cc  sub.cc
src/base/ipc/named_pipe/: README.md
src/base/ipc/named_pipe/client/: CMakeLists.txt  named_pipe_client.cc
src/base/ipc/named_pipe/server/: CMakeLists.txt  named_pipe_server.cc
src/base/ipc/pipe/: CMakeLists.txt  README.md  pipe.cc
src/base/test/: str_test.cc
src/base/test/etc/: cstring_test.cc  fstream_test.cc  str_test.cc  vector_test.cc
src/base/test/study/core/: 01_variant_test.cc  02_assert_test.cc  03_algorithm_test.cc  04_initializelist_test.cc
src/base/test/study/modern/: 01_core_test.cc  02_thread_test.cc  03_tostring_test.cc
src/base/thread/: CMakeLists.txt  thread.cc
src/util/: string16s.h  string_utils.h  test_string16.cc
work_env/: .bashrc  .vimrc  README.md  main.sh
work_env/GTest/: CMakeLists.txt  README.md
work_env/GTest/src/example/: case_expect_n_assert.cc  case_sum.cc
work_env/GTest_with_conan/: README.md
work_env/GTest_with_conan/example/: CMakeLists.txt  bind2nd.cc  gtest_main.cc
work_env/cmaketest/: CMakeCache.txt  CMakeLists.txt  Makefile  bar.c  bar.h  cmake_install.cmake  foo.c  install_manifest.txt  main.c  sharedapp  twomain.c  version.h.if  version.h.in
work_env/cmaketest/dir/: postbuild  prebuild  prelink  test
work_env/cpplint/: CPPLINT.cfg  README.md
work_env/protobuf_with_grpc/: .gitignore  README.md  autoscript.sh
work_env/pyflask/: README.md  app.py
work_env/pyflask/default/: app.py
work_env/settings/: .bashrc  .vim80_vimrc  build_fp_test_base.sh  build_googletest.sh  install_packages.sh  vim80_cpp.vim
